cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
set(RADIX_WINDOW_LIBRARY RadixWindow)

if(NOT DEFINED CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Build type")
endif()

project(${RADIX_WINDOW_LIBRARY} CXX C)
set(CMAKE_CXX_STANDARD 14)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

#### PLATFORM-SPECIFIC FIXES ####

if(DEFINED WIN32)
  add_definitions("-D_USE_MATH_DEFINES")
endif()

#### LIBRARIES ####

set(RADIX_WINDOW_INCLUDE_DIRS "")

find_package(OpenGL REQUIRED)
list(APPEND RADIX_WINDOW_INCLUDE_DIRS ${OPENGL_INCLUDE_DIR})
list(APPEND RADIX_WINDOW_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/external/stx/include)

set(RADIX_WINDOW_LIBRARIES ${OPENGL_gl_LIBRARY})

find_package(PkgConfig REQUIRED)

find_package(SDL2 REQUIRED)
find_package(SDL2_mixer REQUIRED)
list(APPEND RADIX_WINDOW_INCLUDE_DIRS ${SDL2_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIRS})
list(APPEND RADIX_WINDOW_LIBRARIES ${SDL2_LIBRARY} ${SDL2_MIXER_LIBRARIES} )

if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
  add_definitions("-Wall")
endif ()

set(RADIX_WINDOW_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
list(APPEND RADIX_WINDOW_INCLUDE_DIRS "${RADIX_WINDOW_INCLUDE_DIR}")

include_directories(${RADIX_WINDOW_INCLUDE_DIRS})

add_subdirectory(source)

add_library(${RADIX_WINDOW_LIBRARY} STATIC ${RADIX_WINDOW_SOURCES})
target_link_libraries(${RADIX_WINDOW_LIBRARY} ${RADIX_WINDOW_LIBRARIES} dl)

# Export
list(APPEND RADIX_WINDOW_LIBRARIES ${RADIX_WINDOW_LIBRARY})

if (RADIX_WINDOW_EXPORT_CMAKE_PACKAGE_VARS)
  set(RADIX_WINDOW_LIBRARY "${RADIX_WINDOW_LIBRARY}" PARENT_SCOPE)
  set(RADIX_WINDOW_LIBRARIES "${RADIX_WINDOW_LIBRARIES}" PARENT_SCOPE)
  set(RADIX_WINDOW_INCLUDE_DIR "${RADIX_WINDOW_INCLUDE_DIR}" PARENT_SCOPE)
  set(RADIX_WINDOW_INCLUDE_DIRS "${RADIX_WINDOW_INCLUDE_DIRS}" PARENT_SCOPE)
  set(RADIX_WINDOW_DEFINITIONS "${RADIX_WINDOW_DEFINITIONS}" PARENT_SCOPE)
endif ()

if (CMAKE_VERSION VERSION_GREATER 2.8.5)
  include(FeatureSummary)
  feature_summary(WHAT ALL)
endif ()
